--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,12 @@
     height: 80px;
   }
 
+  button {
+    border-radius: 5px;
+    font-weight: 700;
+    font-family: 'Open Sans';
+  }
+
   .container {
     display: flex;
     flex-direction: column;
@@ -40,7 +46,7 @@
     overflow-y: auto;
   }
   
-  .add-book {
+  .add-book-btn {
     width: 200px;
     padding: 1em 2em;
     font-weight: 700;
@@ -51,7 +57,7 @@
     cursor: pointer;
   }
   
-  .add-book:hover {
+  .add-book-btn:hover {
     background-color: black;
     color: white;
   }
@@ -163,4 +169,93 @@
   font-size: .75em;
   font-weight: 700;
   text-anchor: middle;
+}
+
+.modal {
+  display: none;
+}
+.modal.active {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  height: fit-content;
+  width: 600px;
+  margin: auto;
+  gap: 24px;
+  z-index: 10;
+  padding: 16px 35px;
+  border-radius: 5px;
+  background: white;
+}
+.modal-header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.create-form {
+  display: flex;
+  height: 70%;
+  flex-direction: column;
+  gap: 16px;
+  font-weight: 500;
+}
+.input-group {
+  display: flex;
+  align-items: end;
+  gap: 8px;
+  height: 2rem;
+}
+.input-group input {
+  flex: 1;
+  border: 1px solid darkgray;
+  border-radius: 5px;
+  height: 100%;
+}
+
+#current-pages:disabled:hover {
+  cursor: not-allowed;
+}
+.input-group #is-done {
+  height: 1.3rem;
+  width: 1.3rem;
+}
+input[type="checkbox"] {
+  /* appearance: ; */
+  
+}
+
+.active.bg-dark {
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  filter: opacity(.7);
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+}
+
+.close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 0;
+  background: red;
+  border: none;
+  color: white;
+}
+
+.save-book-btn {
+  background: #000;
+  color: white;
+  border: none;
+  padding: 1rem 2rem;
+  width: fit-content;
+}
+button:hover,
+button:focus {
+  background: white;
+  color: #000;
+  outline: 1px solid black;
 }
