--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,7 @@
     border-radius: 5px;
     font-weight: 700;
     font-family: 'Open Sans';
+    cursor: pointer;
   }
 
   .container {
@@ -62,7 +63,7 @@
     color: white;
   }
   
-  #book-wrapper {
+  #book-container {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -72,6 +73,8 @@
     width: 100%;
     height: 100%;
   }
+
+  /* Book */
 
   #book {
     display: flex;
@@ -188,6 +191,8 @@
   text-anchor: middle;
 }
 
+/* Modal */
+
 .modal {
   display: none;
 }
@@ -231,17 +236,26 @@
   height: 100%;
 }
 
+.input-group select {
+  padding: .3em .5em;
+}
+
+#pages {
+  max-width: 100px;
+}
+
 /* selecting previous label base on input if it is disabled */
 .current-page-label:has(~ :is([disabled])) {
   color: grey;
   text-decoration: line-through;
 }
-input[type=tel]:disabled:hover {
+input[type=number]:disabled:hover {
   cursor: not-allowed;
 }
 .input-group #is-done {
   height: 1.3rem;
   width: 1.3rem;
+  cursor: pointer;
 }
 
 .active.bg-dark {
@@ -277,4 +291,9 @@ button:focus {
   background: white;
   color: #000;
   outline: 1px solid black;
+}
+
+.btn-con {
+  display: flex;
+  justify-content: center;
 }
