--- a/style/style.css
+++ b/style/style.css
@@ -88,6 +88,7 @@
     border: 2px solid black;
     border-radius: 20px;
     border-top-left-radius: 0;
+    box-shadow: 6px 6px 0 -3px black;
   }
   #book:hover {
     border-radius: 20px;
